plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.hcproj'
version = '0.0.1-SNAPSHOT'
description = 'healthcareproject-backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// DB
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-core'
	runtimeOnly "org.flywaydb:flyway-database-postgresql"
	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// SMTP
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// ========================================
	implementation platform('software.amazon.awssdk:bom:2.25.0')
	implementation 'software.amazon.awssdk:s3'

	// AI
	implementation platform("org.springframework.ai:spring-ai-bom:1.1.2")
	implementation "org.springframework.ai:spring-ai-starter-model-openai"
}

tasks.named('test') {
	useJUnitPlatform()
}
